# pyms

./: .gitignore  Makefile  README.md  pyproject.toml
pyms/: control.py  main.py
pyms/frontends/textual/: main.py  main.tcss
