[tool.poetry]
name = "pyms"
version = "0.1.0"
description = "python media suite"
authors = ["sewerslider"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pygame = "^2.6.0"
textual = "^0.77.0"
textual-dev = "^1.5.1"
pynsist = "^2.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyms = 'pyms.main:run'
